--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ index_generator:
 
 # Category & Tag
 default_category: uncategorized
-category_map:
+category_map: abc
 tag_map:
 
 # Metadata elements
