--- a/_config.next.yml
+++ b/_config.next.yml
@@ -25,7 +25,7 @@ custom_file_path:
   #postMeta: source/_data/post-meta.njk
   #postBodyStart: source/_data/post-body-start.njk
   postBodyEnd: source/_data/post-body-end.njk
-  #footer: source/_data/footer.njk
+  # footer: source/_data/footer.njk
   #bodyEnd: source/_data/body-end.njk
   #variable: source/_data/variables.styl
   #mixin: source/_data/mixins.styl
@@ -219,7 +219,7 @@ footer:
 
   # If not defined, `author` from Hexo `_config.yml` will be used.
   # Set to `false` to disable the copyright statement.
-  copyright:
+  copyright: false
 
   # Powered by Hexo & NexT
   powered: true
